--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "md5-file": "^5.0.0",
     "puppeteer": "^10.0.0",
     "puppeteer-core": "^10.0.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "util": "^0.12.4"
   },
   "name": "happycoin",
   "version": "1.0.0",
